--- a/css/sheet04/ex01/styles.css
+++ b/css/sheet04/ex01/styles.css
@@ -78,3 +78,40 @@ body {
     display: block;
   }
 }
+.triangulo_top_left {
+  width: 0;
+  height: 0;
+  border-top: 100px solid #000;
+  border-right: 100px solid transparent;
+  position: fixed;
+  top: 0;
+}
+.triangulo_top_right {
+  width: 0;
+  height: 0;
+  border-top: 100px solid #000;
+  border-left: 100px solid transparent;
+  position: fixed;
+  top: 0;
+  right: 0;
+}
+.left {
+  background: #f60404;
+  margin: 0%;
+  height: 80px;
+  border-radius: 0 100% 0 0;
+  width: 80px;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+}
+.right {
+  background: #f60404;
+  margin: 0%;
+  height: 80px;
+  border-radius: 100% 0 0 0;
+  width: 80px;
+  position: fixed;
+  bottom: 0;
+  right: 0;
+}
